--- a/src/components/alg/alg-conspect/sp/pages/elem-sp4.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp4.html
@@ -514,6 +514,60 @@ int main() {
   <p>Первый набор входных данных разобран в условии.</p>
   <p>Во втором наборе входных данных получить строго возрастающую последовательность невозможно.</p>
   <p>В третьем наборе входных данных последовательность уже является строго возрастающей.</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Чтобы последовательность из чисел от 0 до 2млрд. была строго возрастающая, как минимум, надо чтобы каждое i-ое число в массиве было не меньше i. Начиная с n-2 элемента массива будем проверять, что он меньше n-1 элемента и не меньше числа n - 2. Если больше n-1 элемента то делим его на 2, если меньше числа n - 2 то возвращаем -1. Считаем число делений на 2 и выводим как результат.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  // входные данные
+  int t;
+  cin >> t;
+
+  while (t--) {
+    int n;
+    cin >> n;
+    vector&lt;int&gt; A(n);
+    for (int i = 0; i &lt; A.size(); i++) {
+      int tmp;
+      cin >> tmp;
+      A[i] = tmp;
+    }
+
+    // решение
+    if (A[n-1] &lt; n-1) {
+      cout &lt;&lt; "-1\n";
+      continue; // к следующему тестовому случаю
+    }
+
+    int cnt = 0;
+    bool is_bad = false;
+    for (int i = n - 2; i >= 0; i--) {
+      while (A[i] >= A[i + 1]) {
+        A[i] /= 2;
+        cnt++;
+      }
+      if (A[i] &lt; i) {
+        cout &lt;&lt; "-1\n";
+        is_bad = true;  // числа прохие
+        break; // дальше можно не проверять
+      }
+    }
+
+    if (is_bad == true) {
+      continue; // к следующему тестовому случаю
+    }
+
+    cout &lt;&lt; cnt &lt;&lt; '\n';
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -567,6 +621,41 @@ int main() {
 </pre>
   <code>0</code>
   <p>В четвёртом примере можно никому ничего не давать, так как у всех граждан уже по 12 бурлей.</p>
+
+  <details>
+    <summary>Решенине</summary>
+    <p>Нужно найти самого богатого человека, и состояние всех остальных доводить до этого значения.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;algorithm&gt;
+
+using namespace std;
+
+int main() {
+  // входные данные
+  int n;
+  cin >> n;
+  vector&lt;int&gt; A(n);
+  int max_b = 0; // максимум бурлей
+  for (int i = 0; i &lt; A.size(); i++) {
+    int tmp;
+    cin >> tmp;
+    A[i] = tmp;
+    max_b = max(max_b, A[i]);
+  }
+
+  // решение
+  int res = 0;
+  for (int i = 0; i &lt; A.size(); i++) {
+    res += max_b - A[i];
+  }
+
+  // вывод результата
+  cout &lt;&lt; res;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -672,6 +761,36 @@ int main() {
 333
 0
 </pre>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Если a делится на b без остатка то выводим 0. Если есть остаток от деления, то его нужно вычесть из b чтобы получить результат</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // входные данные
+  int t;
+  cin >> t;
+
+  while (t--) {
+    int a, b;
+    cin >> a >> b;
+
+    // решение
+    int res = 0;
+    if (a % b) {
+      res = b - (a % b);
+    }
+
+    // вывод результата
+    cout &lt;&lt; res &lt;&lt; '\n';
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -719,6 +838,55 @@ int main() {
   <p>В первом наборе тестовых данных в первый ход можно поменять местами элементы на позициях 0 и 1, а во второй ход поменять местами элементы на позициях 2 и 3.</p>
   <p>Во втором наборе тестовых данных в первый ход надо поменять местами элементы на позициях 0 и 1.</p>
   <p>В третьем наборе тестовых данных нельзя сделать массив хорошим.</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Массив можно сделать хорошим если число четных элементов на нечетных местах равно числу нечетных элементов на четных местах в массиве. Надо вернуть это число (четных элементов на нечентных местах) Иначе массив сделать хорошим нельзя и мы возвращаем -1.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  // входные данные
+  int t;
+  cin >> t;
+
+  while (t--) {
+    int n;
+    cin >> n;
+    vector&lt;int&gt; A(n);
+    int even = 0; // четный
+    int odd = 0;  // нечетный
+
+    for (int i = 0; i &lt; A.size(); i++) {
+      int tmp;
+      cin >> tmp;
+      A[i] = tmp;
+
+      // решение
+      if (i % 2) {
+        if (!(A[i] % 2)) {
+          even++;
+        }
+      } else {
+        if (A[i] % 2) {
+          odd++;
+        }
+      }
+    }
+
+    // вывод результата
+    if (even == odd) {
+      cout &lt;&lt; even &lt;&lt; '\n';
+    } else {
+      cout &lt;&lt; "-1\n";
+    }
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -763,6 +931,53 @@ int main() {
 1
 10
 </pre>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Максимально возможное входное число содержит 5 цифр, поэтому для отевта заведем массив на 5 элементов. Если остаток от деления на 10 равен нулю, то увеличиваем счетчик нулей на 1, иначе записываем в массив остаток от деления с числом нулей из счетчика нулей, увеличиваем число нулей на 1 и число чисел в ответе на 1.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;cmath&gt;
+
+using namespace std;
+
+int main() {
+  // входные данные
+  int t;
+  cin >> t;
+
+  while (t--) {
+    int n;
+    cin >> n;
+
+    // решение
+    int count = 0;  // число чисел в ответе
+    int zeroes = 0; // число нулей в следующем числе
+    int next = 0;   // следующее число
+    vector&lt;int&gt; A(5, 0);
+    while (n) {
+      if (n % 10 == 0) {
+        zeroes++;
+      } else {
+        next = (n % 10) * (int)pow(10, zeroes);
+        A[count] = next;
+        count++;
+        zeroes++;
+      }
+      n /= 10;
+    }
+
+    // вывод результата
+    cout &lt;&lt; count &lt;&lt; '\n';
+    for (int i = 0; i &lt; count; i++) {
+      cout &lt;&lt; A[i] &lt;&lt; " ";
+    }
+    cout &lt;&lt; '\n';
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -808,6 +1023,45 @@ int main() {
 1
 66
 </pre>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Определяем последнюю цифру dig и количество цифр cnt в номере ответившей квартиры. Значит в 4 квартиры каждой предыдущей цифры уже звонили. Сумма цифр в этих 4 кварирах равна 1 + 2 + 3 + 4 = 10. Прибавим к этому цифры от 1 до cnt.</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // входные данные
+  int t;
+  cin >> t;
+  while (t--) {
+    int n;
+    cin >> n;
+
+    // решение
+    int res = 0;
+    int dig = n % 10; // цифра в номере
+    int cnt = 0;      // количество цифр в номере
+    while (n) {
+      n /= 10;
+      cnt++;
+    }
+
+    for (int i = 1; i &lt; dig; i++) {
+      res += 10;
+    }
+    for (int i = 1; i &lt;= cnt; i++) {
+      res += i;
+    }
+
+    // вывод результата
+    cout &lt;&lt; res &lt;&lt; '\n';
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -930,6 +1184,49 @@ int main() {
   <p>2-й набор: нужно сделать один шаг вниз, чтобы достичь (2,1).</p>
   <p>3-й набор: невозможно достичь (1,3), не сделав подряд два шага вправо или не покидая пределы сетки.</p>
   <p>4-й набор: оптимальная последовательность шагов выглядит например так: (1,1)→(1,2)→(2,2)→(2,1)→(3,1)→(3,2)→(4,2). Можно доказать, что это оптимальное решение. Таким образом, ответ равен 6.</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Из двуx сторон n и m определяем длинную сторону. Меняем n и m так, чтобы в n была длинная сторона. Если короткая сторона 1, а длинная больше 2 то решения нет, возвращаем -1.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;cmath&gt;
+
+using namespace std;
+
+int main() {
+  // входные данные
+  int t;
+  cin >> t;
+  while (t--) {
+    int n, m;
+    cin >> n >> m;
+
+    // решение
+    if (m > n) {
+      int tmp = n;
+      n = m;
+      m = tmp;
+    }
+
+    if ((m == 1) && (n > 2)) {
+      cout &lt;&lt; "-1\n";
+      continue;  // переходим к следующему тесту
+    }
+
+    int res = 0;
+    if ((n - m) % 2 == 0) {
+      res = (m - 1) * 2 + (n - m) * 2;
+    } else {
+      res = (m - 1) * 2 + (n - m) * 2 - 1;
+    }
+
+    // вывод результата
+    cout &lt;&lt; res &lt;&lt; '\n';
+  }
+}
+</pre>
+  </details>
 </article>
 
 
