--- a/src/components/alg/alg-conspect/stepik/pages/elem-stepik-01.html
+++ b/src/components/alg/alg-conspect/stepik/pages/elem-stepik-01.html
@@ -7,7 +7,7 @@
 <article class="article">
   <h3>Ссылка на курс</h3>
 
-  <p><a href="https://stepik.org/course/80538">https://stepik.org/course/80538</a></p>
+  <p><a href="https://stepik.org/course/80538" target="_blank">https://stepik.org/course/80538</a></p>
   <p>4 недели обучения, 2—5 часов в неделю</p>
   <p>Бесплатный курс от МФТИ Центр развития ИТ-образования</p>
 </article>
@@ -3479,10 +3479,10 @@ int main() {
     <h4>Запросы к трехмерному массиву</h4>
     <p>Вы со своим напарником проникли в банк массивов, и нашли там самый большой и самый красивый массив. Пока вы любовались его совершенством, ваш напарник по быстрому его упаковывал. Прибежав домой вы обнаружили, что упакован массив был довольно плохо - часть элементов потерялась. Теперь вам необходимо их восстановить. Поскольку вы очень долго им любовались, то запомнили массив во всех деталях. Поскольку восстановлением массива занимается ваш напарник, то он иногда спрашивает у вас, что хранилось раньше в массиве в ячейке с индексами i, j, k. Вам необходимо ответить на все его запросы. Массив нумеруется с единицы.</p>
     <h4>Входные данные</h4>
-    <p>В первой строке записано три целых числа k,n,m (1&le;k,n,m&le;50) - высота, ширина и длинна массива соответственно.</p>
-    <p>Далее следует k блоков, в i-м блоке описан i-й слой трехмерной таблицы. Каждый слой представляет из себя двумерный массив с n строками и m столбцами, в каждой ячейке которого записано по одному целому числу, по модулю не превосходящему 10<sup>9</sup>. После каждого слоя следует пустая строка.</p>
-    <p>После описания массива записано число Q 1≤Q≤10<sup>4</sup>) - количество запросов напарника.</p>
-    <p>В следующих Q строках записаны сами запросы. Каждый запрос описывается тремя целыми числами i, j, t (1≤i≤k; 1≤j≤n; 1≤t ≤m). В ответ на этот запрос требуется вывести число, которое находится в i-м по высоте слое, в j-й строке и t-м столбце.</p>
+    <p>В первой строке записано три целых числа k, n, m (1 ≤ k, n, m ≤ 50) - высота, ширина и длинна массива соответственно.</p>
+    <p>Далее следует k блоков, в i-м блоке описан i-й слой трехмерной таблицы. Каждый слой представляет из себя двумерный массив с n строками и m столбцами, в каждой ячейке которого записано по одному целому числу, по модулю не превосходящему 10⁹. После каждого слоя следует пустая строка.</p>
+    <p>После описания массива записано число Q (1 ≤ Q ≤ 10⁴) - количество запросов напарника.</p>
+    <p>В следующих Q строках записаны сами запросы. Каждый запрос описывается тремя целыми числами i, j, t (1 ≤ i ≤ k; 1 ≤ j ≤ n; 1 ≤t ≤ m). В ответ на этот запрос требуется вывести число, которое находится в i-м по высоте слое, в j-й строке и t-м столбце.</p>
     <h4>Выходные данные</h4>
     <p>Выведите Q чисел по одному в строке - ответы на запросы вашего напарника.</p>
 
@@ -3562,25 +3562,334 @@ Output:
 using namespace std;
 
 int main() {
-  int n;
-  cin &gt;&gt; n;
-  int a[n][n];
-  for (int i = 0; i &lt; n; i++) {
-    for (int j = 0; j &lt; n; j++) {
-      cin &gt;&gt; a[i][j];
+  // входные данные
+  int k, n, m;
+  cin >> k >> n >> m;
+
+  // создаем и заполняем трехмерный массив
+  int a[k+1][n+1][m+1];
+  for (int i = 1; i &lt;= k; i++) {
+    for (int j = 1; j &lt;= n; j++) {
+      for (int t = 1; t &lt;= m; t++) {
+        cin >> a[i][j][t];
+      }
     }
   }
 
-  for (int i = 0; i &lt; n; i++) {
-    for (int j = 0; j &lt; n; j++) {
-      cout &lt;&lt; a[n-j-1][n-i-1] &lt;&lt; " ";
+  int q;
+  cin >> q;
+
+  for (int qi = 1; qi &lt;= q; qi++) {
+    int i, j, t;
+    cin >> i >> j >> t;
+    cout &lt;&lt; a[i][j][t] &lt;&lt; '\n';
+  }
+}
+</pre>
+  </details>
+
+
+
+  <details>
+    <summary>Задача 11. Чемпионат мира по шахматам</summary>
+    <h4>Чемпионат мира по шахматам</h4>
+
+    <p>Вы решили стать чемпионом мира по шахматам! К сожалению, на турниры пускают только игроков с высоким рейтингом, поэтому сначала надо получить разряд, хотя бы четвертый. Вы пришли на рейтинговый турнир, а там произошел невообразимый скандал! Организаторы не верят, что вы умеете играть в шахматы и попросили вас пройти квалификацию.</p>
+
+    <p>Квалификация - очень простой процесс для вас. На доске стоит конь, требуется отметить все клетки, в которые он может походить. К счастью, у вас с собой был компьютер, поэтому вы сразу сели писать программу, которая решает эту задачу.</p>
+
+    <h4>Входные данные</h4>
+
+    <p>Во входных данных записана шахматная доска. Она представляет из себя таблицу 8x8, в каждой клетке которой записан символ точки (номер 46 в ASCII таблице), кроме одной - в ней записан символ K (номер 75 в ASCII таблице). В этой выделенной точке стоит конь.</p>
+
+    <h4>Выходные данные</h4>
+
+    <p>Выведите таблицу в аналогичном формате, заменив все символы точек на символ ! (номер 33 в ASCII таблице) для всех ячеек, в которые может походить конь.</p>
+
+    <h4>Примечание</h4>
+
+    <p>Конь всегда ходит на две клетки в одном направлении (горизонтальном или вертикальном) и на одну в перпендикулярном изначальному. Смотрите первый тест для более точного понимания ходов коня.</p>
+
+    <h4>Sample Input 1:</h4>
+<pre>
+........
+........
+........
+........
+....K...
+........
+........
+........
+</pre>
+
+    <h4>Sample Output 1:</h4>
+<pre>
+........
+........
+...!.!..
+..!...!.
+....K...
+..!...!.
+...!.!..
+........
+</pre>
+
+    <h4>Sample Input 2:</h4>
+<pre>
+........
+........
+........
+........
+........
+........
+........
+K.......
+</pre>
+
+    <h4>Sample Output 2:</h4>
+<pre>
+........
+........
+........
+........
+........
+.!......
+..!.....
+K.......
+</pre>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int ki, kj;
+
+  // создаем и заполняем шахматную доску
+  char a[8][8];
+  for (int i = 0; i &lt; 8; i++) {
+    for (int j = 0; j &lt; 8; j++) {
+      cin >> a[i][j];
+      if (a[i][j] == 75) {
+        ki = i;
+        kj = j;
+      }
     }
-    cout &lt;&lt; endl;
+  }
+
+  // создаем массив ходов коня
+  int b[8][2] = { {1,2},{ 2,1 },{2,-1},{1,-2},
+                {-1,-2},{-2,-1},{-2,1},{-1,2}};
+  for (int i = 0; i &lt; 8; i++) {
+    if ((ki + b[i][0]) >=0 && (ki + b[i][0]) &lt;
+    8 && (kj + b[i][1]) >=0 && (kj + b[i][1]) &lt; 8) {
+      a[ki + b[i][0]][kj + b[i][1]] = 33;
+    }
+  }
+
+  for (int i = 0; i &lt; 8; i++) {
+    for (int j = 0; j &lt; 8; j++) {
+      cout &lt;&lt; a[i][j];
+    }
+    cout &lt;&lt; '\n';
+  }
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- 3.3 Квадратичные сортировки -->
+<article class="article">
+  <div class="anchor" id="p3.3"></div>
+  <h3>3.3 Квадратичные сортировки</h3>
+
+  <p>На вход подается массив (последовательность) чисел. Необходимо отсортировать его по невозрастанию или неубыванию элементов.</p>
+  <p>Рассмотрим пример, как можно упорядочить по неубыванию три элемента a, b, c. Для этого мы може последовательно сравнить пары a и b, a и c, b и c.За три сравнения мы упорядочим значения наших элементах. Тот же алгоритм будет работать для четырех переменных a, b, c, d.</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int a, b, c, d;
+  cin >> a >> b >> c >> d;
+  if (a > b) swap(a, b);
+  if (a > c) swap(a, c);
+  if (a > d) swap(a, d);
+  if (b > c) swap(b, c);
+  if (b > d) swap(b, d);
+  if (c > d) swap(c, d);
+  cout &lt;&lt; a &lt;&lt; ' ' &lt;&lt; b &lt;&lt; ' '
+       &lt;&lt; c &lt;&lt; ' ' &lt;&lt; d &lt;&lt; '\n';
+
+  return 0;
+}
+</pre>
+  <p>Такой алгоритм легко обобдить для n элементов. swap(a, b) меняет значения a и b местами.</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int a[1000];
+  for (int i = 0; i &lt; 1000; i++) {
+    cin >> a[i];
+  }
+
+  // сортировка
+  for (int i = 0; i &lt; 1000; i++) {
+    for (int j = i + 1; j &lt; 1000; j++) {
+      if (a[i] > a[j]) {
+        swap(a[i], a[j]);
+      }
+    }
+  }
+
+  // вывод результата
+  for (int i = 0; i &lt; 1000; i++) {
+    cout &lt;&lt; a[i] &lt;&lt; ' ';
   }
 
   return 0;
 }
 </pre>
+
+  <h4>Сортировка выбором</h4>
+  <p>Можно немного модифицировать предыдущую сортировку. Давайте не будем менять переменные местами каждый раз когда a[i] > a[j]. Будем искать такой индекс j при котором a[j] будет минимальным от i до конца массива. Будем хранить минимальный индекс элемента в переменной jmin. Будем менять i-й элемент с минимальным после i, если мыл найден меньший элемент.</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int a[1000];
+  for (int i = 0; i &lt; 1000; i++) {
+    cin >> a[i];
+  }
+
+  // сортировка выбором
+  for (int i = 0; i &lt; 1000; i++) {
+    int jmin = i;
+    for (int j = i + 1; j &lt; 1000; j++) {
+      if (a[jmin] > a[j]) {
+        jmin = j;
+      }
+    }
+    swap(a[i], a[jmin]);
+  }
+
+  // вывод результата
+  for (int i = 0; i &lt; 1000; i++) {
+    cout &lt;&lt; a[i] &lt;&lt; ' ';
+  }
+
+  return 0;
+}
+</pre>
+
+  <h4>Сортировка пузырьком</h4>
+  <p>Попарно сравнимаем соседние элементы массива начиная с первых двух. Если элемент больше следующего, то мы их меняем местами. В массиве из n элементов мы можем повторить данный алгоритм n-1 раз. За первый проход самый большой элемет становится в конец массива. Повторив этот алгоритм n-1 раз мы поставим все элементы на свои места.</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int a[1000];
+  for (int i = 0; i &lt; 1000; i++) {
+    cin >> a[i];
+  }
+
+  // сортировка пузырьком
+  for (int i = 0; i &lt; 1000 - 1; i++) {
+    for (int j = 0; j &lt; 1000 - 1; j++) {
+      if (a[j] > a[j+1]) {
+        swap(a[j], a[j+1]);
+      }
+    }
+  }
+
+  // вывод результата
+  for (int i = 0; i &lt; 1000; i++) {
+    cout &lt;&lt; a[i] &lt;&lt; ' ';
+  }
+
+  return 0;
+}
+</pre>
+  <p>Оценка времени работы алгоритма. Алгоритм выполняемт (n-1)*(n-1) действий. Если пренебречь -1, получим n². Такая сортировка будет работать очень долго при n = 10⁵</p>
+
+  <h4>Сортировка расческой</h4>
+  <p>Это улучшенная сортировка пузырьком. Изначально сравниваем не соседние, а находящиеся на некотором фиксированном расстоянии элементы. После каждого проходя уменьшаем это расстояние, пока оно не станет равно 1.</p>
+
+  <h4>Сортировка вставками</h4>
+  <p>Данный алгоритм не является эффективным. Его используют в гибридных сортировках, использующих сразу несколько алгоритмов сортировки. Применяют для небольшого числа элементов, например 20. Представим, что у нас уже есть отсортированный по неубыванию массив, в который надо добавить один элемент. Если данный элемент больше всех элементов, то мы его добавим в конец. Иначе, надо найти позицию куда добавить заданный элемент, сдвинув все элементы больше его вправо.</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int a[1000];
+  for (int i = 0; i &lt; 1000; i++) {
+    cin >> a[i];
+  }
+
+  // сортировка вставками
+  for (int i = 0; i &lt; 1000; i++) {
+    int j = i;
+    for (int k = i - 1; k >= 0; k--) {
+      if (a[k] > a[i]) {
+        j = k;
+      }
+    }
+    int tmp = a[i];
+    for (int k = i; k > j; k--) {
+      a[k] = a[k-1];
+    }
+    a[j] = tmp;
+  }
+
+  // вывод результата
+  for (int i = 0; i &lt; 1000; i++) {
+    cout &lt;&lt; a[i] &lt;&lt; ' ';
+  }
+
+  return 0;
+}
+</pre>
+
+  <h4>Сортировка Шелла</h4>
+  <p>Это улучшение сортировки вставками. Изначально сравниваем и сортируем элементы, стоящие на определенном расстоянии d друг от друга. Потом уменьшаем d постепенно доходя до d = 1.</p>
+
+  <details>
+    <summary>Задача 12. Украденная Земля</summary>
+    <h4>Украденная Земля</h4>
+
+    <p>В мире много разных планет, и всем присвоены какие-то номера. В вашей звездной системе n+1 планета, у каждое есть свой номер, и эти номера давно отсортированы по неубыванию. События последних лет привели к тому, что Землю украли! Ученые люди сообразительные, поэтому выкинули ее из списка, однако недавно Земля вернулась обратно. Теперь перед вами стоит непростая задача - вернуть Землю обратно в список.</p>
+
+    <h4>Входные данные</h4>
+
+    <p>В этой задаче нет входных данных) Все, что вам надо сделать написать часть программы, которая вставляет номер Земли обратно в упорядоченный список. Конечно, после вставки список все еще должен быть упорядочен. Вы можете полагать, что где-то выше вашей программы объявленна переменная n массив a на n+1 элемент, первые n в котором заполнены числами, идущими в порядке неубывания. Массив нумеруется с 0. Также есть переменная t - в ней содержится число, которое требуется вставить в данный массив. Все элементы массива, а также число t - целые и не превосходят 10⁹ по модулю.</p>
+
+    <h4>Выходные данные</h4>
+
+    <p>Выводить ничего не надо. Достаточно написать такую часть программы, которая вставляет число t в массив a.</p>
+
+    <h4>Sample Input:</h4>
+<pre>
+8 3
+1 2 4 5 6 7 8 9
+</pre>
+
+    <h4>Sample Output:</h4>
+    <code>1 2 3 4 5 6 7 8 9 </code>
   </details>
 </article>
 
