--- a/src/components/front/front-edu/pages/elem-edu-dsr2024cpp.html
+++ b/src/components/front/front-edu/pages/elem-edu-dsr2024cpp.html
@@ -38,5 +38,6 @@
   <p><a href="lec-12.html" class="js-dsr-lecture">Лекция 12 (11.02.2025)</a></p>
   <p><a href="lec-13.html" class="js-dsr-lecture">Лекция 13 (18.02.2025)</a></p>
   <p><a href="lec-14.html" class="js-dsr-lecture">Лекция 14 (04.03.2025)</a></p>
+  <p><a href="lec-15.html" class="js-dsr-lecture">Лекция 15 (11.03.2025)</a></p>
 </article>
 
