--- a/src/components/code/code-c/pages/elem-book2.html
+++ b/src/components/code/code-c/pages/elem-book2.html
@@ -100,6 +100,10 @@
     <br><a href="#p10.2">10.2 Управление текстом (215)</a>
     <br><a href="#p10.3">10.3 Напутствие или GOTO (218)</a>
   </p>
+
+  <p>
+    <a href="#p11">Список литературы (225)</a>
+  </p>
 </article>
 
 
@@ -2899,5 +2903,20 @@ printf("%d\n", i);
 
   <h4>Напутствие</h4>
   <p>Сначала вы должны написать что-то сами. Программированием, как и любым другим ремеслом, надо заниматься. Изучение Си, как и любого другого языка программирования, немыслимо без упражнений. Чтобы научиться программировать, нужно программировать. Сначала задачи не должны быть слишком сложные. Разбивайте задачу на части, которые можно отладить отдельно друг от друга. Читайте документацию. Не сдавайтесь. И тогда к вам придет удача.</p>
+</article>
+
+
+<!-- Список литературы -->
+<article class="article">
+  <div class="anchor" id="p11"></div>
+  <h2>Список литературы (225)</h2>
+
+  <ol>
+    <li>1992 Керниган, Ритчи - Язык программирования Си</li>
+    <li>1982 Уэзрелл - Этюды для программистов</li>
+    <li>1984 Керниган, Плоджер - Элементы стиля программирования</li>
+    <li>1979 Брукс - Как проектируются и создаются программные комплексы</li>
+    <li>1996 Петзолд - Программирование для Windows 95 в двух частях</li>
+  </ol>
 </article>
 
